<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom">

        <menu
            android:id="@+id/sorting">

            <item
                android:id="@+id/menu_sort_asc"
                android:orderInCategory="0"
                android:title="@string/a_z"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_sort_dec"
                android:orderInCategory="1"
                android:title="@string/z_a"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>