<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:letterSpacing="0.2"
        android:text="@string/playlists"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_playlist_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_margin="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:text="@string/add"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>