<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui"
            android:fontFamily="@font/roboto_mono_medium"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_medium"/>

        <LinearLayout
            android:id="@+id/accent_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_theme_option"
                android:layout_gravity="center_vertical"
                app:tint="?colorPrimary"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/select_accent_color"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_big_med"
                    android:textColor="@color/material_on_background_emphasis_high_type"/>

                <TextView
                    android:id="@+id/current_accent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/choose_your_favorite_color_of_choice"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/material_on_background_emphasis_medium"/>

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/accent_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            android:orientation="horizontal"/>

        <LinearLayout
            android:id="@+id/album_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting_album"
                android:layout_gravity="center_vertical"
                app:tint="?colorPrimary"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/show_embedded_album_arts"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_big_med"
                    android:textColor="@color/material_on_background_emphasis_high_type"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/huge_improve_in_performance_if_disabled"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/material_on_background_emphasis_medium"/>

            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/album_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>