<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:letterSpacing="0.2"
            android:text="@string/sleep_time_help"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/time_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center_horizontal"
            android:letterSpacing="0.2"
            android:textColor="@color/colorTextHigh"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_dialog"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:text="@string/cancel"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stop_sleep_timer"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:text="@string/stop"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>